<resources>
    <string name="app_name">RecipeFinder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_dashboardapp">dashboardapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_saved_recipe">Collection</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_create_recipe">Create Recipe </string>
    <string name="title_browse">Browse</string>
    <string-array name="cuisine_types">
        <item>Italian</item>
        <item>Mexican</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>French</item>
    </string-array>

    <string-array name="measurements">
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>L</item>
        <item>oz</item>
        <item>lb</item>
        <item>tsp</item>
        <item>tbsp</item>
        <item>cup</item>
    </string-array>

    <string-array name="difficulty_levels">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="ingredient_units">
        <item>g</item>
        <item>kg</item>
        <item>ml</item>
        <item>cup</item>
        <item>tsp</item>
        <item>tbsp</item>
        <!-- Add more units -->
    </string-array>
</resources>