<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_create_recipe"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_create_recipe" />
    <item
        android:id="@+id/navigation_browse"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_browse" />
    <item
        android:id="@+id/navigation_saved_recipe"
        android:icon="@drawable/baseline_bookmark_24"
        android:title="@string/title_saved_recipe" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>