<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.recipefinder.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_navigation_home_to_foodDialogDetailsFragment"
        app:destination="@id/foodDialogDetailsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_browseFragment"
            app:destination="@id/navigation_browse" />
    </fragment>

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.recipefinder.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_saved_recipe"
        android:name="com.example.recipefinder.SavedRecipes"
        android:label="@string/title_saved_recipe"
        tools:layout="@layout/fragment_saved_recipe" />
    <fragment
        android:id="@+id/navigation_create_recipe"
        android:name="com.example.recipefinder.ui.createrecipe.CreateRecipeFragment"
        android:label="fragment_create_recipe"
        tools:layout="@layout/fragment_create_recipe" />
    <fragment
        android:id="@+id/foodDetailsFragment"
        android:name="com.example.recipefinder.FoodDetailsFragment"
        android:label="Food Details"
        tools:layout="@layout/fragment_view_food">
        <argument
            android:name="recipe"
            app:argType="com.example.recipefinder.entities.Recipe" />
    </fragment>
    <fragment
        android:id="@+id/foodDialogDetailsFragment"
        android:name="com.example.recipefinder.FoodDialogDetailsFragment"
        android:label="Food Dialog Details"
        android:layout="@layout/fragment_dialog_food_details">
        <argument
            android:name="recipe"
            app:argType="com.example.recipefinder.entities.Recipe" />
    </fragment>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.recipefinder.ui.profile.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragment_browse"
        android:name="com.example.recipefinder.BrowseFragment"
        android:label="fragment_browse"
        tools:layout="@layout/fragment_browse" />


</navigation>